--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,5 +35,145 @@ $content-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
+$primary: black;
+$secondary: grey;
+
+// Generic
+.fill-remaining-space {
+  flex: 1 1 auto;
+}
+.full-width {
+  width: 100%;
+}
+.text-center {
+  text-align: center;
+}
+.text-right {
+  text-align: right;
+}
+.text-ellipse {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.no-wrap {
+  white-space: nowrap;
+}
+.spacer {
+  flex: 1 1 auto;
+}
+.right {
+  float: right;
+}
+
+// Overall App
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+h4, p {
+  margin: 2px;
+}
+a {
+  text-decoration: none;
+}
+
+app-root {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  height: 100%;
+}
+
+// Toolbar
+app-toolbar {
+  z-index: 200;
+}
+mat-toolbar {
+
+}
+
+// Side Nav
+mat-sidenav {
+  width: 15%;
+  background-color: white !important;
+  justify-content: left;
+}
+mat-sidenav-container {
+  background: #f5f5f5;
+  flex: 1;
+  height: 100%;
+}
+.nav-button {
+  font-size: 15px;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding-right: 10px;
+  text-decoration: none;
+}
+
+// Content
+.nav-content {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  padding-right: 10px;
+}
+.container {
+  margin: 10px;
+  flex-wrap: wrap;
+}
+.content-containers {
+  display: flex;
+  justify-content: space-between;
+
+  .content-list {
+    width: 100%;
+  }
+  .content-details {
+    width: 100%;
+  }
+  .content-item {
+    min-height:100px;
+    display: inline-block;
+  }
+}
+.flex-box {
+  display:flex;
+  width: 100%;
+  justify-content: space-between;
+  border: black solid 1px;
+}
+input.ng-invalid {
+  color: red;
+}
+input.ng-valid {
+  color: limegreen;
+}
+.green {
+  background: aquamarine;
+}
+
+// Login
+.login-container {
+  padding: 20%;
+  //vertical-align:middle;
+}
+
+// Material elements
+mat-card {
+  border-radius: 0px !important;
+}
+mat-card-content {
+
+}
+mat-list-item {
+  border: black solid 1px;
+  height: auto;
+}
+.mat-list-item.green {
+  background: greenyellow;
+}
+mat-form-field {
+  width: 90%;
+}
